# Pokerion

./: .gitignore  Readme.md  pyproject.toml
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js
frontend/js/components/: cards.js  replay.js  strategy.js  table.js  training.js
src/pokerion/: __main__.py
src/pokerion/common/: types.py
src/pokerion/game/: base.py  kuhn.py
src/pokerion/server/: app.py  state.py
src/pokerion/server/routes/: game.py  replay.py  training.py
src/pokerion/solver/: info_set.py  vanilla_cfr.py
src/pokerion/training/: persistence.py  runner.py
tests/: test_cfr_solver.py  test_kuhn_engine.py
